@@ -328,7 +328,7 @@ int    pn53x_initiator_select_dep_target (struct nfc_device *pnd,
 int    pn53x_initiator_transceive_bits (struct nfc_device *pnd, const uint8_t *pbtTx, const size_t szTxBits,
                                          const uint8_t *pbtTxPar, uint8_t *pbtRx, uint8_t *pbtRxPar);
 int    pn53x_initiator_transceive_bytes (struct nfc_device *pnd, const uint8_t *pbtTx, const size_t szTx,
-                                          uint8_t *pbtRx, size_t *pszRx, int timeout);
+                                          uint8_t *pbtRx, const size_t szRx, int timeout);
 int    pn53x_initiator_transceive_bits_timed (struct nfc_device *pnd, const uint8_t *pbtTx, const size_t szTxBits,
                                          const uint8_t *pbtTxPar, uint8_t *pbtRx, uint8_t *pbtRxPar, uint32_t *cycles);
 int    pn53x_initiator_transceive_bytes_timed (struct nfc_device *pnd, const uint8_t *pbtTx, const size_t szTx,
